--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Hello Boot</title>
+    <meta charset="UTF-8" http-equiv="Content-Type" content="text/html">
 </head>
 <body>
 Hello
+<a href="/hello">hello</a>
 </body>
 </html>
